--- a/roles/node_exporter/handlers/main.yml
+++ b/roles/node_exporter/handlers/main.yml
@@ -2,8 +2,7 @@
 - name: Restart node_exporter
   listen: "restart node_exporter"
   become: true
-  ansible.builtin.systemd:
-    daemon_reload: true
+  ansible.builtin.service:
     name: node_exporter
     state: restarted
   when:
