--- a/roles/node_exporter/tasks/configure.yml
+++ b/roles/node_exporter/tasks/configure.yml
@@ -7,6 +7,17 @@
     group: root
     mode: 0644
   notify: restart node_exporter
+  when: ansible_service_mgr == "systemd"
+
+- name: Copy the Node Exporter openrc service file
+  template:
+    src: node_exporter.initd.j2
+    dest: /etc/init.d/node_exporter
+    owner: root
+    group: root
+    mode: 0755
+  notify: restart node_exporter
+  when: ansible_service_mgr == "openrc"
 
 - name: Create node_exporter config directory
   ansible.builtin.file:
