--- a/roles/alertmanager/handlers/main.yml
+++ b/roles/alertmanager/handlers/main.yml
@@ -2,8 +2,7 @@
 - name: Restart alertmanager
   listen: "restart alertmanager"
   become: true
-  ansible.builtin.systemd:
-    daemon_reload: true
+  ansible.builtin.service:
     name: alertmanager
     state: restarted
   register: alertmanager_restarted
@@ -11,7 +10,7 @@
 - name: Reload alertmanager
   listen: "reload alertmanager"
   become: true
-  ansible.builtin.systemd:
+  ansible.builtin.service:
     name: alertmanager
     state: reloaded
   when: alertmanager_restarted is not defined
