--- a/roles/alertmanager/tasks/configure.yml
+++ b/roles/alertmanager/tasks/configure.yml
@@ -30,6 +30,18 @@
     mode: 0644
   notify:
     - restart alertmanager
+  when: ansible_service_mgr == "systemd"
+
+- name: create openrc service unit
+  template:
+    src: alertmanager.initd.j2
+    dest: /etc/init.d/alertmanager
+    owner: root
+    group: root
+    mode: 0755
+  notify:
+    - restart alertmanager
+  when: ansible_service_mgr == "openrc"
 
 - name: Copy alertmanager template files
   ansible.builtin.copy:
