Add support for OpenRC in prometheus

--- a/roles/prometheus/handlers/main.yml
+++ b/roles/prometheus/handlers/main.yml
@@ -2,8 +2,7 @@
 - name: Restart prometheus
   listen: "restart prometheus"
   become: true
-  ansible.builtin.systemd:
-    daemon_reload: true
+  ansible.builtin.service:
     name: prometheus
     state: restarted
   register: prometheus_restarted
@@ -11,7 +10,7 @@
 - name: Reload prometheus
   listen: "reload prometheus"
   become: true
-  ansible.builtin.systemd:
+  ansible.builtin.service:
     name: prometheus
     state: reloaded
   when: prometheus_restarted is not defined
