--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -34,8 +34,7 @@
 
 - name: Ensure prometheus service is started and enabled
   become: true
-  ansible.builtin.systemd:
-    daemon_reload: true
+  ansible.builtin.service:
     name: prometheus
     state: started
     enabled: true
